@@ -1,19 +1,10 @@
 {
-  "timestamp" : "2025-02-01T01:45:26Z",
-  "count_outdated" : 1355,
-  "uniques_outdated" : 880,
-  "count" : 1359,
-  "uniques" : 884,
+  "timestamp" : "2025-02-02T01:44:35Z",
+  "count_outdated" : 1357,
+  "uniques_outdated" : 882,
+  "count" : 1360,
+  "uniques" : 885,
   "clones" : [
-    {
-      "timestamp": "2025-01-19T00:00:00Z",
-      "count": 2,
-      "count_minmax": [ 2, 2 ],
-      "count_decinc": [ 0, 2 ],
-      "uniques": 2,
-      "uniques_minmax": [ 2, 2 ],
-      "uniques_decinc": [ 0, 2 ]
-    },
     {
       "timestamp": "2025-01-26T00:00:00Z",
       "count": 1,
@@ -25,6 +16,15 @@
     },
     {
       "timestamp": "2025-01-31T00:00:00Z",
+      "count": 1,
+      "count_minmax": [ 1, 1 ],
+      "count_decinc": [ 0, 1 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ],
+      "uniques_decinc": [ 0, 1 ]
+    },
+    {
+      "timestamp": "2025-02-01T00:00:00Z",
       "count": 1,
       "count_minmax": [ 1, 1 ],
       "count_decinc": [ 0, 1 ],
