@@ -1,12 +1,7 @@
 {
-  "count": 4,
-  "uniques": 3,
+  "count": 3,
+  "uniques": 2,
   "clones": [
-    {
-      "timestamp": "2025-01-19T00:00:00Z",
-      "count": 2,
-      "uniques": 2
-    },
     {
       "timestamp": "2025-01-26T00:00:00Z",
       "count": 1,
@@ -14,6 +9,11 @@
     },
     {
       "timestamp": "2025-01-31T00:00:00Z",
+      "count": 1,
+      "uniques": 1
+    },
+    {
+      "timestamp": "2025-02-01T00:00:00Z",
       "count": 1,
       "uniques": 1
     }
